--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
 </head>
 <body>
   <h1>LZ78 Visualiser</h1>
-  <textarea id="root" rows="10" cols="50">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</textarea>
-  <!-- abaabbaababababababbbaaba -->
-  <button>Visualise</button>
+  <main>
+    <textarea id="root" rows="10" cols="50">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</textarea>
+    <!-- abaabbaababababababbbaaba -->
+    <section>
+      <button class="default">Set To Default</button>
+      <button class="clear">Clear</button>
+      <button class="visualise">Visualise</button>
+    </section>
+
+  </main>
 </body>
 </html>
